# winston-daily-rotate-file-admin

./: .gitignore  LICENSE  README.md  _material-theme.scss  package-lock.json  package.json  rollup.config.js
.github/workflows/: publish-new-version.yaml  publish.yaml
src/: App.svelte  main.ts  routes.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: cmd.rs  main.rs
src/components/LogDirectories/: LogDirectoriesTable.svelte  LogDirectoriesTableRowCell.svelte  LogsDirectoriesTableHeaderCell.svelte
src/components/LogGroup/: LogGroupDetailsTable.svelte  LogGroupDetailsTableRowCell.svelte  LogGroupDetailsTableRowCheckboxCell.svelte  LogGroupDetailsTableRowDateCell.svelte  LogGroupSearchTable.svelte
src/components/LogGroups/: LogGroupsTable.svelte  LogGroupsTableRowDeleteCell.svelte
src/components/UI/Navigation/: NavigationBar.svelte
src/components/UI/Table/: VirtualTable.svelte
src/lib/utils/: index.ts  lodash.ts  promises.ts
src/models/: index.ts
src/models/common/: AnyObject.ts  index.ts
src/models/logs/: LogAuditFile.ts  LogGroup.ts  LogGroupFile.ts  index.ts
src/pages/: LogGroupDetails.svelte  LogGroupSearch.svelte  LogGroups.svelte  Logs.svelte
src/services/: directories.service.ts  files.service.ts  index.ts  logs.service.ts
src/stores/logs/: actions.ts  index.ts  keys.ts  state.ts  thunks.ts
